--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ plugins {
     id 'java-library'
 }
 
+
+apply plugin: 'distribution'
+mainClassName = "edu.handong.analysis.HGUCoursePatternAnalyzer"    
+
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
@@ -26,4 +30,12 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+
+    
 }
